# FERI-Digitalni-dvojcek

./: .gitignore  README.md  build.sh  build_backend.sh  docker-compose.yml  project_plan.md  project_plan.txt  slim.report.json  spletno_programiranje_nacrt.typ
backend/: .env_example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  diesel.toml  slim.report.json
backend/migrations/2025-04-20-153701_create_messages/: up.sql
backend/migrations/2025-04-22-182247_create_users/: up.sql
backend/migrations/2025-04-26-144634_create_users/: up.sql
backend/migrations/2025-04-26-151517_create_events/: up.sql
backend/migrations/2025-04-26-170929_location/: up.sql
backend/migrations/2025-05-03-151802_chat_messages/: down.sql  up.sql
backend/migrations/2025-05-05-084002_friends/: down.sql  up.sql
backend/migrations/2025-05-18-090836_location_outline/: down.sql  up.sql
backend/migrations/2025-05-18-111829_location/: down.sql  up.sql
backend/migrations/2025-05-18-111911_create_events/: up.sql
backend/migrations/2025-05-18-193421_event_allowed_users/: down.sql  up.sql
backend/migrations/2025-05-18-211802_chat_messages/: up.sql
backend/migrations/2025-05-19-101101_friend_chat_messages/: down.sql  up.sql
backend/migrations/2025-06-04-000001_add_tags_to_events/: down.sql  up.sql
backend/migrations/2025-06-04-join-event-users/: down.sql  up.sql
backend/src/: auth.rs  db.rs  main.rs  models.rs  schema.rs  user_handler.rs
backend/src/config/: db.rs  mod.rs  parameters.rs
backend/src/error/: chat_error.rs  event_error.rs  friend_error.rs  mod.rs  (+3 more)
(+203 files in other folders)
