[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5.0"

