[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
diesel = { version = "2.2.0", features = ["chrono", "numeric", "postgres", "serde_json"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5.0"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
headers = "0.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum = { version = "0.8.3", features = ["ws"] }
hyper = "1.6.0"
async-trait = "0.1.88"
once_cell = "1.21.3"
thiserror = "2.0.12"
futures = "0.3.31"
features = "0.10.0"
bcrypt = "0.17.0"
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
rustls = "0.23.27"
